--- a/activityservice/src/main/resources/application.yml
+++ b/activityservice/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-   name: activityservice
+   name: activity-service
   data:
     mongodb:
       uri: mongodb://localhost:27017/fitnessactivities
@@ -8,3 +8,9 @@ spring:
 
 server:
   port: 8082
+
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
